--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Detacoop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -19,14 +19,12 @@
               <img src="img/logo_scandes_green.png">
             </div>
             <form action="admin.html">        
-              <!-- Email input -->
               <div data-mdb-input-init class="form-outline mb-5">
                 <input type="email" id="form3Example3" class="form-control form-control-lg"
                   placeholder="Ingrese su email" />
                 <label class="form-label" for="form3Example3">Email</label>
               </div>
     
-              <!-- Password input -->
               <div data-mdb-input-init class="form-outline mb-3">
                 <input type="password" id="form3Example4" class="form-control form-control-lg"
                   placeholder="Ingrese su contraseña" />
@@ -34,7 +32,6 @@
               </div>
     
               <div class="d-flex justify-content-between align-items-center">
-                <!-- Checkbox -->
                 <div class="form-check mb-0">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
                   <label class="form-check-label" for="form2Example3">
@@ -55,11 +52,9 @@
       </div>
       <div
         class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-footer">
-        <!-- Copyright -->
         <div class="text-white mb-3 mb-md-0">
           Detacoop © 2025
         </div>
-        <!-- Copyright -->
       </div>
     </section>
   </body>
