--- a/admin.html
+++ b/admin.html
@@ -1,43 +1,46 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scandes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style_admin.css">
+
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style_admin.css" />
   </head>
   <body>
     <section class="layout">
-        <div class="sidebar">
-          <div class="logo">
-            <img src="img/logo.png" width="200">
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <div class="logo">
+          <img src="img/logo.png" width="200" alt="Logo" />
+        </div>
+        <div class="menu">
+          <div class="sidebar-button active">
+            <span class="icon icon-revision"></span>Revisión
           </div>
-          <div class="menu">
-            <div class="sidebar-button active">
-              <span class="icon icon-revision"></span>Revisión
-            </div>
-            <div class="sidebar-button">
-              <span class="icon icon-pensiones"></span>Validación Pensiones
-            </div>
-            <div class="sidebar-button">
-              <span class="icon icon-telefono"></span>Verificación Teléfonica
-            </div>
+          <div class="sidebar-button">
+            <span class="icon icon-pensiones"></span>Validación Pensiones
+          </div>
+          <div class="sidebar-button">
+            <span class="icon icon-telefono"></span>Verificación Teléfonica
           </div>
         </div>
-        <div class="body">
-          <div class="head">
-            <div class="col-md-12 text-center">
-              <img src="img/logo_scandes_green.png">
-            </div>
-            <div class="logout" onclick="window.history.go(-1); return false;">
-              <img src="img/logout.png" width="35">
-            </div>
+      </div>
+
+      <!-- Área principal -->
+      <div class="body">
+        <div class="head">
+          <div class="col-md-12 text-center">
+            <img src="img/logo_scandes_green.png" alt="Scandes Logo" />
+          </div>
+          <div class="logout" onclick="window.history.go(-1); return false;">
+            <img src="img/logout.png" width="35" alt="Logout" />
           </div>
         </div>
+      </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="main.js"></script>
   </body>
 </html>
