fix: Cambió Contrseña por Password

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     Recordarme
                   </label>
                 </div>
-                <a href="#!" class="text-body">Recuperar Contraseña</a>
+                <a href="#!" class="text-body">Recuperar Password</a>
               </div>
     
               <div class="text-center text-lg-start mt-4 pt-2">
